--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,8 @@
-name: CoinflipPlugin
+name: CosmosCoinflip
 version: '${project.version}'
 main: me.rages.cosmosconflip.CoinflipPlugin
-api-version: 1.20
+api-version: 1.18
+commands:
+  coinflip:
+    description: Your description
+    permission: cosmosconflip.create
